CB-18643: Migrate to AWS SDK v2
In this commit we've replaced the AWS SDK v1 to the v2.
This version change touches several things in our codebase:
- Import changes
- You must create all clients using the client builder method. Constructors are no longer available.
- Request and response object names
- All client class names are now fully camel cased and no longer prefixed by "Amazon".
- Exception class names, and their structures and relationships, have also changed.
- Client configurations
- Waiters
- Clients and operation request and response objects are now immutable and cannot be changed after creation.
- The setter method names do't include the "set" or "with"

Co-authored-by: Dénes Berger <dberger@cloudera.com>
Co-authored-by: Ferenc Schneider <fschneider@cloudera.com>